Update contact email in footer from support@my-fi.ca to connect@my-fi.ca

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -88,7 +88,7 @@ const fullCanonical = canonicalUrl ? `${siteUrl}${canonicalUrl}` : siteUrl;
           </div>
           <div class="footer-col">
             <h4>Contact</h4>
-            <a href="mailto:support@my-fi.ca">support@my-fi.ca</a>
+            <a href="mailto:connect@my-fi.ca">connect@my-fi.ca</a>
           </div>
         </div>
       </div>
